devel
-----

* EE only bugfix: On DisjointSmartGraphs that are used in anonymous way,
  there was a chance that the query could fail, if non-disjoint collections
  were part of the query. Named DisjointSmartGraphs have been save to this bug.
  Example:
  DisjointSmartGraph (graph) on vertices -edges-> vertices
  Query:

  WITH vertices, unrelated
  FOR out IN 1 OUTBOUND "v/1:1" edges
    FOR u IN unrelated
    RETURN [out, u]
  
  The "unrelated" collection was pulled into the DisjointSmartGraph, causing
  the AQL setup to create erroneous state.
  This is now fixed and the above query works.
  This query:

  WITH vertices, unrelated
  FOR out IN 1 OUTBOUND "v/1:1" GRAPH "graph"
    FOR u IN unrelated
    RETURN [out, u]

  was not affected by this bug.

* Fixed issue BTS-268: fix a flaky Foxx self-heal procedure.

* Fixed issue DEVSUP-720: Within an AQL query, the "COLLECT WITH COUNT INTO"
  statement could lead to a wrong count output when used in combination with
  an index which has been created with an array index attribute.

* Fixed ES-784 regression related to encryption cipher propagation to
  ArangoSearch data.

* Improved the wording for sharding options displayed in the web interface.

  Instead of offering `flexible` and `single`, now use the more intuitive
  `Sharded` and `OneShard` options, and update the help text for them.

* Fix profiling of AQL queries with the `silent` and `stream` options sets in
  combination. Using the `silent` option makes a query execute, but discard all
  its results instantly. This led to some confusion in streaming queries, which
  can return the first query results once they are available, but don't 
  necessarily execute the full query.
  Now, `silent` correctly discards all results even in streaming queries, but
  this has the effect that a streaming query will likely be executed completely
  when the `silent` option is set. This is not the default however, and the